<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="danielacedo.com.offering.ConfigurationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/txv_configurationTitle"
        android:textAlignment="center"
        android:id="@+id/txv_configuration_title"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txv_showHomeOffering"
        android:text="@string/txv_showHomeOffering"
        android:layout_below="@id/txv_configuration_title"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txv_showHomeOffering"
        android:layout_toRightOf="@id/txv_showHomeOffering"
        android:id="@+id/cb_showHomeOffering"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txv_showElectronicOffering"
        android:text="@string/txv_showElectronicOffering"
        android:layout_below="@id/txv_showHomeOffering"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txv_showElectronicOffering"
        android:layout_toRightOf="@id/txv_showElectronicOffering"
        android:id="@+id/cb_showElectronicOffering"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txv_showSportOffering"
        android:text="@string/txv_showSportOffering"
        android:layout_below="@id/txv_showElectronicOffering"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txv_showSportOffering"
        android:layout_toRightOf="@id/txv_showSportOffering"
        android:id="@+id/cb_showSportOffering"/>

    <View
        android:layout_below="@id/txv_showSportOffering"
        style="@style/separatorTheme"
        android:id="@+id/configurationSeparator"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txv_showOfferingWeight"
        android:text="@string/txv_showOfferingWeight"
        android:layout_below="@id/configurationSeparator"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txv_showOfferingWeight"
        android:layout_toRightOf="@id/txv_showOfferingWeight"
        android:id="@+id/cb_showOfferingWeight"/>

    <Button
        android:layout_marginTop="30dp"
        android:text="@string/btn_configurationAccept"
        style="@style/genericButton"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txv_showOfferingWeight"
        android:id="@+id/btn_settingAccept"
        />

</RelativeLayout>
