<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_offering"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="danielacedo.com.offering.AddOffering">

    <TextView
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txv_offeringName"
        android:id="@+id/txv_offeringName"
        />

    <EditText
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/txv_offeringName"
        android:layout_toRightOf="@id/txv_offeringName"
        android:id="@+id/edt_offeringName"/>

    <TextView
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_offeringName"
        android:text="@string/txv_offeringShop"
        android:id="@+id/txv_offeringShop"
        />

    <EditText
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_offeringName"
        android:layout_alignBaseline="@id/txv_offeringShop"
        android:layout_toRightOf="@id/txv_offeringShop"
        android:id="@+id/edt_offeringShop"/>

    <TextView
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_offeringShop"
        android:text="@string/txv_offeringDate"
        android:id="@+id/txv_offeringDate"
        />

    <EditText
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txv_offeringDate"
        android:layout_alignBaseline="@id/txv_offeringDate"
        android:layout_below="@id/txv_offeringShop"
        android:id="@+id/edt_offeringDate"/>

    <TextView
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_offeringDate"
        android:text="@string/txv_offeringCategory"
        android:id="@+id/txv_offeringCategory"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txv_offeringCategory"
        android:layout_below="@id/txv_offeringDate"
        android:spinnerMode="dropdown"
        android:layout_alignBaseline="@id/txv_offeringCategory"
        android:id="@+id/spn_offeringCategory"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txv_offeringCategory"
        android:text="@string/txv_offeringWeight"
        android:id="@+id/txv_offeringWeight"
        />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown"
        android:layout_below="@id/txv_offeringCategory"
        android:layout_alignBaseline="@id/txv_offeringWeight"
        android:layout_toRightOf="@id/txv_offeringWeight"
        android:id="@+id/spn_offeringWeight"
        />

    <Button
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_add"
        android:layout_below="@id/txv_offeringWeight"
        style="@style/genericButton"
        android:id="@+id/btn_add"/>


</RelativeLayout>
